remove rsync from dev env; added $Icon entity

--- a/fe/src/frmdb-editor/frmdb-editor.directive.scss
+++ b/fe/src/frmdb-editor/frmdb-editor.directive.scss
@@ -65,6 +65,7 @@ $grid-gutter-width:           5px;
 @import "../../../themes/frmdb/utilities/background";
 @import "../../../themes/frmdb/utilities/sizing";
 @import "../../../themes/frmdb/tooltip";
+@import "../../../themes/frmdb/icons";
 
 .top-panel, .left-panel {
     font-family: $font-family-base;
