--- a/fe/src/frmdb-editor/icon-editor.component.html
+++ b/fe/src/frmdb-editor/icon-editor.component.html
@@ -16,7 +16,7 @@
                 </nav>
                 <div class="tab-content h-100 overflow-auto">
                     <div class="tab-pane active" id="Available_Icons" role="tabpanel" aria-labelledby="home-tab">
-                        <div class="d-flex align-items-center">
+                        <div class="d-flex flex-column h-100">
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" data-frmdb-value="$FRMDBQ.$Icon[].filter._id.contains"
                                     placeholder="Search icons: hotels, water sports, beauty, consulting ...">
@@ -24,16 +24,19 @@
                                     <span class="input-group-text"><i class="frmdb-i-search"></i></span>
                                 </div>
                             </div>
-                        </div>
-                        <div class="card-deck frmdb-cards-wrap-5 text-center">
-                            <a style="cursor: pointer" class="card border-0" data-frmdb-table="$FRMDB.$Icon[]" data-frmdb-table-limit="50">
-                                <h1><frmdb-icon data-frmdb-attr="name::$FRMDB.$Icon[]._id"></frmdb-icon></h1>
-                                <span data-frmdb-value="$FRMDB.$Icon[]._id"></span>
-                            </a>
+
+                            <div class="card-deck flex-grow-1 frmdb-cards-wrap-5 text-center overflow-auto">
+                                <a style="cursor: pointer" class="card border-0" data-frmdb-table="$FRMDB.$Icon[]" data-frmdb-table-limit="50">
+                                    <h1>
+                                        <frmdb-icon data-frmdb-attr="name::$FRMDB.$Icon[]._id"></frmdb-icon>
+                                    </h1>
+                                    <span data-frmdb-value="$FRMDB.$Icon[]._id"></span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="Paid_Icons" role="tabpanel" aria-labelledby="profile-tab">
-                        <div class="d-flex align-items-center">
+                        <div class="d-flex flex-column h-100">
                             <div class="input-group mb-3">
                                 <input id="frmdb-search-premium-icons" type="text" class="form-control"
                                     placeholder="Search icons: hotels, water sports, beauty, consulting ...">
@@ -41,14 +44,13 @@
                                     <span class="input-group-text"><i class="frmdb-i-search"></i></span>
                                 </div>
                             </div>
-                        </div>
-                        <div class="card-deck frmdb-cards-wrap-5">
-                            <a style="cursor: pointer" class="card border-0 text-center" 
-                                data-frmdb-table="premiumIcons[]" data-frmdb-attr="data-frmdb-premium-icon-id::premiumIcons[].iconId"
-                            >
-                                <img class="border rounded" data-frmdb-value="premiumIcons[].previewURL" data-frmdb-attr="alt::paidIconsUrls[].previewURL"
-                                    style="width: 50px; height: 50px;">
-                            </a>
+                            <div class="card-deck frmdb-cards-wrap-5">
+                                <a style="cursor: pointer" class="card border-0 text-center" data-frmdb-table="premiumIcons[]"
+                                    data-frmdb-attr="data-frmdb-premium-icon-id::premiumIcons[].iconId">
+                                    <img class="border rounded" data-frmdb-value="premiumIcons[].previewURL" data-frmdb-attr="alt::paidIconsUrls[].previewURL"
+                                        style="width: 50px; height: 50px;">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
