--- a/fe/src/i18n-customizer/i18n-customizer.component.html
+++ b/fe/src/i18n-customizer/i18n-customizer.component.html
@@ -1,13 +1,14 @@
 <div class="btn-group mr-3" role="group">
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
         <button class="btn" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i data-frmdb-attr="class:selectedFlag"></i>
+            <frmdb-icon data-frmdb-attr="name:selectedFlag"></frmdb-icon>
         </button>
         <div class="dropdown-menu" aria-labelledby="frmdb-editor-i18n-select">
             <a class="dropdown-item text-nowrap" data-frmdb-table="languages[]" 
                 data-frmdb-attr="href:languages[].urlPathname" data-frmdb-editor-link>
-                <i data-frmdb-attr="class:languages[].flag"></i>
+                <frmdb-icon data-frmdb-attr="name:languages[].flag"></frmdb-icon>
                 <span data-frmdb-value="languages[].fullLanguage"></span>
+                <button data-frmdb-if="languages[].canAutoTranslate" class="badge" data-frmdb-attr="title:languages[].titleAutoTranslate"><frmdb-icon name="fontawesome-solid-robot-android-automate-computer-cyborg"></frmdb-icon></button>
             </a>
         </div>
     </div>
