made highlight more user friendly

--- a/fe/src/frmdb-editor/element-tree.component.html
+++ b/fe/src/frmdb-editor/element-tree.component.html
@@ -5,7 +5,7 @@
             <li><span data-frmdb-value="parentElName" title="Parent Element Box">Parent Element Box</span></li>
             <li>
                 <ul>
-                    <li data-frmdb-if="hasPrev" class="prev" ><span data-frmdb-value="prevName" title="Previous Sibling Element Box">Previous Sibling Box</span></li>
+                    <li data-frmdb-if="hasPrev" class="prev" style="display: none;" ><span data-frmdb-value="prevName" title="Previous Sibling Element Box">Previous Sibling Box</span></li>
                     <li class="elem" ><span data-frmdb-value="elName" title="Current Element Box">Selected Page Element</span></li>
                 </ul>
             </li>
