--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -24,7 +24,7 @@
 <div id="parent-selected" class="box">
 </div>
 <div id="selected" class="box">
-    <div class="actions selected">
+    <div class="actions selected" onmouseover="$FCMP(this).hoverOverAction(event)">
         <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="frmdb-i-arrows"></i></a> -->
         <div class="btn dropdown frmdb-dropdown-hover" title="Move Element">
             <i class="frmdb-i-arrows-alt"></i>
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-    <div class="actions add-elements">
+    <div class="actions add-elements" onmouseover="$FCMP(this).hoverOverAction(event)">
         <!-- <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="frmdb-i-level-down-alt fa-rotate-180"></i></a>
         <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i
                 class="frmdb-i-level-down-alt fa-rotate-90"></i></a> -->
