--- a/fe/src/frmdb-editor/add-element.component.html
+++ b/fe/src/frmdb-editor/add-element.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog mt-3" role="document" style="width: 99vw; max-width: 99vw">
         <div class="modal-content" style="width: 99vw; max-width: 99vw">
             <div class="modal-header">
-                <p class="modal-title text-primary"><i class="frmdb-i-plus-circle"></i> Choose Page Element to Add</p>
+                <h2 class="modal-title text-primary"><i class="frmdb-i-plus-circle"></i> Choose Page Element to Add</h2>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><small><i class="frmdb-i-window-close"></i></small></span>
                 </button>
